--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,22 +7,113 @@
     box-sizing: border-box;
 }
 
-img {
-    max-width: 100%;
-}
-
 body {
-    background-color: #222;
-    color: white;
+    background-color: #303030;
 }
 
-header,
-footer {
-    width: 100%;
-    background: #EEE;
-    color: black;
+header{
+    img {
+        height: 80%;
+    }
+    
+    div>a {
+        font-size: 10px;
+        height: 100%;
+    
+        &:hover {
+            border-bottom: 5px solid #0282f9;
+        }
+    }
 }
 
-header img.logo {
-    height: 2rem;
+section.mainUp{
+    .container-fluid {
+        height: 16rem;
+    
+        .row {
+            height: 100%;
+    
+            img {
+                height: 100%;
+                object-fit: cover;
+                object-position: top;
+            }
+        }
+    }
+    
+    .col-12 {
+        position: relative;
+    
+        .currentSeries {
+            position: absolute;
+            top: -1.4rem;
+            font-weight: 700;
+            background-color: #0282f9;
+        }
+    }
+    
+    .card_ {
+        width: calc(100vw / 8 - 2em);
+        height: calc(100vw / 8 - 2em);
+        margin: 1em;
+    
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: top;
+        }
+    }
+    
+    .load_>button {
+        cursor: pointer;
+        background-color: #0282f9;
+    }
+}
+
+section.mainDown{
+    background-color: #0282f9;
+    .col-12 {
+        min-height: 6.5rem;
+    }
+    
+    span {
+        font-size: 10px;
+    }
+    
+    img {
+        height: 50px;
+    }
+    
+    .visa {
+        height: 40p;
+    }
+}
+
+section.footerUp{
+    li {
+        cursor: pointer;
+        list-style: none;
+        color: #787373;
+        font-size: 13px;
+    
+        &:hover {
+            color: #0282f9;
+        }
+    }
+    
+    .col-6>.img {
+        height: 100%;
+        background-image: url(img/dc-logo-bg.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 0;
+    }
+}
+
+section.footerDown{
+    span,
+img {
+    cursor: pointer;
+}
 }
